methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:2: error: Unmatched closing brace '}' ignored here
                                                                                                                                    }
                                                                                                                                    ^